0.7.1 version, refactored and split the ChunkTrailer class into 7 other ones.